2013-07-01  Paul Eggert  <eggert@cs.ucla.edu>

	Fix bug re noninteractive multithreaded memory allocation (Bug#14569).
	* emacs.c (malloc_enable_thread): Hoist extern decl to top level.
	(main) [HAVE_PTHREAD && !SYSTEM_MALLOC && !DOUG_LEA_MALLOC]:
	Invoke malloc_enable_thread even when not interactive.
	Problem reported by Ken Brown in <http://bugs.gnu.org/14569#275>.
	* process.c (init_process_emacs) [CYGWIN]: Tickle glib even
	in this case, since the underlying bug has now been fixed.

2013-07-01  Juanma Barranquero  <lekktu@gmail.com>

	* emacs.c (Fkill_emacs): Expand Vauto_save_list_file_name before
	unlinking it (bug#14691).

2013-06-30  Michal Nazarewicz  <mina86@mina86.com>

	* buffer.c (FKill_buffer): Run `kill-buffer-query-functions'
	before checking whether buffer is modified.  This lets
	`kill-buffer-query-functions' cancel killing of the buffer or save
	its content before `kill-buffer' asks user the "Buffer %s
	modified; kill anyway?" question.

2013-06-30  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfns.m (handlePanelKeys): Don't process Command+Function keys.
	Let the super performKeyEquivalent deal with them (Bug#14747).

2013-06-30  Paul Eggert  <eggert@cs.ucla.edu>

	* widget.c (resize_cb): Remove unused local.

	Do not use GTK 3 if it exists but cannot be compiled.
	* xmenu.c (x_menu_wait_for_event) [!USE_GTK]:
	* xterm.c (x_error_handler) [!USE_GTK]:
	Do not use GTK 3.

	* intervals.c (get_local_map): Actually clip POSITION (Bug#14753).

2013-06-30  Eli Zaretskii  <eliz@gnu.org>

	* intervals.c (get_local_map): Instead of aborting, clip POSITION
	to the valid range of values.  (Bug#14753)

	* xdisp.c (Fmove_point_visually): Invalidate the cursor position
	when moving point by using the current glyph matrix.  This avoids
	the need to force redisplay when this function is called in a
	loop.

2013-06-29  Paul Eggert  <eggert@cs.ucla.edu>

	Fix minor problems found by static checking.
	* coding.c (encode_inhibit_flag, inhibit_flag): New functions.